# bus-metrics-england

./: .flake8  .gitignore  .pre-commit-config.yaml  .pydocstyle  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  run.py  setup.py
.github/: code_review_template.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report_template.md  feature_request_template.md
.github/workflows/: codecov.yml
src/bus_metrics/aggregation/: build_schedules.py  config.toml  preprocessing.py  punctuality_rate.py
src/bus_metrics/setup/: README.md  build_lookup.py  ingest.toml  ingest_realtime_data.py  ingest_static_data.py
src/make_data/: build_schedules.py  make_gtfs_from_real.py
src/setup/: ingest.toml  ingest_realtime_data.py  ingest_static_data.py
src/utils/: preprocessing.py
tests/aggregation/: test_AggregationTool.py  test_build_schedules.py  test_fixtures.py  test_preprocessing.py
tests/aggregations/: test_AggregationTool.py
tests/data/: BODS_API_message  LAD_boundaries.geojson  geography_lookup_table.csv  north_east_20240221-SAMPLE.csv  stop_level_punctuality.csv  stops_sample.csv
tests/setup/: test_RealtimeDataIngest.py  test_StaticDataIngest.py
